<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="theme">Day</string>
    <string name="app_name">AvoorApp</string>
    <string name="app_version">0.2</string>

    <string name="LandingScreenIntentSponsorInfoKey">LandingScreenIntentKey_Username</string>
    <string name="HomeScreenSponsorInfoIntentKey">HomeScreenSponsorInfoIntentKey</string>
    <string name="GalleryScreenAboutTempleIntentKey">GalleryScreenAboutTempleIntentKey</string>
    <string name="GalleryScreenTemplePathigamIntentKey">GalleryScreenTemplePathigamIntentKey</string>
    <string name="GalleryScreenVasthramDetailsIntentKey">GalleryScreenVasthramDetailsIntentKey</string>

    <string name="LandingScreenLogoImgViewDescription">Holds the app logo</string>
    <string name="AboutScreenLogoImgViewDescription">Holds the app logo</string>
    <string name="HomeScreenLogoImgViewDescription">Holds the app logo</string>
    <string name="SponsorsScreenLogoImgViewDescription">Holds the app logo</string>
    <string name="GalleryScreenLogoImgViewDescription">Holds the app logo</string>
    <string name="PradoshamDatesScreenLogoImgViewDescription">Holds the app logo</string>
    <string name="SankalpamScreenLogoImgViewDescription">Holds the app logo</string>
    <string name="PradoshamDatesSponsorsScreenLogoImgViewDescription">Holds the app logo</string>
    <string name="GalleryAboutTempleScreenLogoImgViewDescription">Holds the app logo</string>
    <string name="GalleryTemplePathigamScreenLogoImgViewDescription">Holds the app logo</string>
    <string name="GalleryVasthramDetailsScreenLogoImgViewDescription">Holds the app logo</string>

    <string name="LandingScreenTitleEnglish">Avoor\n Pasupatheecharam\n Pradosha Kainkariyam\n App</string>
    <string name="AvoorAppDisplayNameEnglish">திருஆவூர் பசுபதீச்சரம்</string>
    <string name="HomeScreenTitleEnglish">Pradosha\nKainkariyam\nApp</string>
    <string name="SponsorsScreenTitleEnglish">List of Sponsors</string>
    <string name="GalleryScreenTitleEnglish">General Information</string>
    <string name="PradoshamDatesScreenTitleEnglish">Pradosham Dates</string>
    <string name="SankalpamScreenTitleEnglish">Sankalpam Details</string>
    <string name="PradoshamDatesSponsorsScreenTitleEnglish">Pradosham Sponsors</string>
    <string name="GalleryAboutTempleScreenTitleEnglish">Greatness of Temple</string>
    <string name="GalleryTemplePathigamScreenTitleEnglish">Temple pathigam</string>
    <string name="GalleryVasthramDetailsScreenTitleEnglish">Vasthram details</string>

    <string name="LandingScreenTitleTamil">ஏவூர் பசுபதீச்சரம் பிரதோஷம் கைங்கரியம் செயலி</string>
    <string name="AvoorAppDisplayNameTamil">ஆவூர் பிரதோஷம் செயலி</string>
    <string name="HomeScreenTitleTamil">ஆவூர் பசுபதீஸ்வரம் கோவில்</string>

    <string name="LandingScreenUsernameHintText">Mobile number</string>
    <string name="LandingScreenPasswordHintText">Password</string>
    <string name="LandingScreenLoginButtonText">Login</string>

    <string name="LandingScreenLoginStatusInvalidCredentials">Invalid username or password.</string>
    <string name="LandingScreenLoginStatusCredentialsMismatch">Username and Password do not match.</string>
    <string name="LandingScreenLoginStatusDownloadFailed">Unable to verify. Check if username is invalid or internet is unavailable.</string>

    <string name="MenuItemSponsorsList">List of Sponsors</string>
    <string name="MenuItemPradoshamDates">Pradosham Dates</string>
    <string name="MenuItemPradoshamSponsors">Pradosham Sponsors</string>
    <string name="MenuItemSankalpamDetails">Sankalpam Details</string>
    <string name="GalleryScreenSubMenuItemVasthramDetails">Vasthram Details</string>
    <string name="MenuItemPhotosAndVideos">General Info</string>

    <string name="ThreeDotsMenuLogoutName">Log out</string>
    <string name="ThreeDotsMenuAboutName">About</string>

    <string name="SponsorScreenTableHeaderName">Name</string>
    <string name="SponsorScreenTableHeaderNumber">Mobile</string>
    <string name="SponsorScreenTableHeaderLocation">Location</string>

    <string name="SponsorInfoBasicInfoDocumentName">SponsorInfo</string>
    <string name="SponsorScreenInfoCollectionName">SponsorsScreenInfo</string>
    <string name="SponsorScreenAllInfoStatusDownloadFailed">Unable to download data of all sponsors.</string>

    <string name="FirebaseSponsorsInfoCollectionName">Sponsors</string>
    <string name="FirebasePradoshamDetailsCollectionName">Pradosham</string>
    <string name="FirebaseGalleryInformationCollectionName">Gallery</string>

    <string name="PradoshamDatesScreenTableHeaderSNo">SNo</string>
    <string name="PradoshamDatesScreenTableHeaderId">ID</string>
    <string name="PradoshamDatesScreenTableHeaderTamilDate">Tamil Date</string>
    <string name="PradoshamDatesScreenTableHeaderEnglishDate">English Date</string>
    <string name="PradoshamDatesScreenTableHeaderDay">Day</string>
    <string name="PradoshamDatesScreenYearSelectLabelName">Select year:</string>

    <string name="PradoshamScreenAllInfoStatusDownloadFailed">Unable to download data of all sponsors.</string>

    <string name="PradoshamInfoAttributeNameId">id</string>
    <string name="PradoshamInfoAttributeNameEnglishDate">englishDate</string>
    <string name="PradoshamInfoAttributeNameTamilDate">tamilDate</string>
    <string name="PradoshamInfoAttributeNameDay">day</string>

    <string name="SponsorFamilyInfoAttributeNameName">name</string>
    <string name="SponsorFamilyInfoAttributeNameGothram">gothram</string>
    <string name="SponsorFamilyInfoAttributeNameRasi">rasi</string>
    <string name="SponsorFamilyInfoAttributeNameStar">star</string>

    <string name="SponsoredPradoshamInfoAttributeYear">year</string>
    <string name="SponsoredPradoshamInfoAttributeIndices">indices</string>

    <string name="SankalpamScreenUpayamLabel">Upayam: </string>

    <string name="SankalpamScreenPradoshamInfoTableLabel">Pradoshams sponsored:</string>
    <string name="SankalpamScreenPradoshamInfoTableHeaderYear">Year</string>
    <string name="SankalpamScreenPradoshamInfoTableHeaderTamilDate">Tamil Date</string>
    <string name="SankalpamScreenPradoshamInfoTableHeaderEnglishDate">English Date</string>
    <string name="SankalpamScreenPradoshamInfoTableHeaderDay">Day</string>

    <string name="SankalpamScreenFamilyInfoTableLabel">Sponsor Sankalpam List:</string>
    <string name="SankalpamScreenFamilyInfoTableHeaderName">Name</string>
    <string name="SankalpamScreenFamilyInfoTableHeaderGothram">Gothram</string>
    <string name="SankalpamScreenFamilyInfoTableHeaderStar">Star</string>
    <string name="SankalpamScreenFamilyInfoTableHeaderRasi">Rasi</string>

    <string name="PradoshamDatesSponsorsScreenYearSelectLabelName">Select year:</string>
    <string name="PradoshamDatesSponsorsScreenSponsorsTableHeaderEnglishDate">Date</string>
    <string name="PradoshamDatesSponsorsScreenSponsorsTableHeaderDay">Day</string>
    <string name="PradoshamDatesSponsorsScreenSponsorsTableHeaderName">Name</string>
    <string name="PradoshamDatesSponsorsScreenSponsorsTableHeaderLocation">Location</string>

    <string name="PradoshamDatesSponsorsScreenAllSponsorInfoStatusDownloadFailed">Unable to download data of all sponsors.</string>
    <string name="PradoshamDatesSponsorsScreenAllPradoshamInfoStatusDownloadFailed">Unable to download data of all pradoshams.</string>

    <string name="GalleryScreenSubMenuItemAboutTemple">About Temple</string>
    <string name="GalleryScreenSubMenuItemTemplePathigam">Temple Pathigam</string>
    <string name="GalleryScreenSubMenuItemMedia">Gallery</string>

    <string name="GalleryScreenGalleryInfoStatusDownloadFailed">Unable to download gallery information.</string>

    <string name="GalleryTemplePathigamScreenIntroContent">திருஞானசம்பந்தர் அருளியது</string>

    <string name="SankalpamAdminScreenSponsorSelectLabelName">Select sponsor:</string>

    <string name="SharedPreferencesLoginStatusFileKey">login_status_file</string>
    <string name="SharedPreferencesLoginStatusKey">login_status</string>
    <string name="SharedPreferencesLoginStatusNumber">mobile_number</string>

    <string name="AvoorGurukkalYoutubeChannelLink">https://youtube.com/@Pichaisivachariyar?si=HNSzc62uaElQnhbC</string>

    <string name="NotificationTitle">Update!</string>
    <string name="NotificationChannelName">"AvoorApp"</string>
    <string name="NotificationChannelDescription">Channel for Avoor App notifications</string>

</resources>