<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/SankalpamScreenToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/SankalpamScreenImgViewLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:layout_margin="10sp"
                    android:contentDescription="@string/SankalpamScreenLogoImgViewDescription"
                    android:src="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/SankalpamScreenTxtViewAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_toEndOf="@+id/SankalpamScreenImgViewLogo"
                    android:textSize="20sp" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/SankalpamScreenTxtViewTitleMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:textSize="35sp"
            android:layout_below="@+id/SankalpamScreenToolbar" />

        <TextView
            android:id="@+id/SankalpamScreenTxtViewUpayamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:textSize="25sp"
            android:layout_below="@+id/SankalpamScreenTxtViewTitleMessage" />

        <TextView
            android:id="@+id/SankalpamScreenTxtViewPradoshamLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:textSize="20sp"
            android:text="@string/SankalpamScreenPradoshamInfoTableLabel"
            android:layout_below="@+id/SankalpamScreenTxtViewUpayamName" />

        <TableLayout
            android:id="@+id/SankalpamScreenPradoshamInfoTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/SankalpamScreenTxtViewPradoshamLabel" >

            <TableRow
                tools:ignore="UselessParent" >

                <TextView
                    android:text="@string/SankalpamScreenPradoshamInfoTableHeaderYear"
                    android:textSize="20sp"
                    android:paddingHorizontal="10sp" />

                <TextView
                    android:text="@string/SankalpamScreenPradoshamInfoTableHeaderTamilDate"
                    android:textSize="20sp"
                    android:paddingHorizontal="10sp" />

                <TextView
                    android:text="@string/SankalpamScreenPradoshamInfoTableHeaderEnglishDate"
                    android:textSize="20sp"
                    android:paddingHorizontal="10sp" />

                <TextView
                    android:text="@string/SankalpamScreenPradoshamInfoTableHeaderDay"
                    android:textSize="20sp"
                    android:paddingHorizontal="10sp" />

            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/SankalpamScreenTxtViewFamilyLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:textSize="20sp"
            android:text="@string/SankalpamScreenFamilyInfoTableLabel"
            android:layout_below="@+id/SankalpamScreenPradoshamInfoTable" />

        <TableLayout
            android:id="@+id/SankalpamScreenFamilyInfoTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/SankalpamScreenTxtViewFamilyLabel" >

            <TableRow
                tools:ignore="UselessParent" >

                <TextView
                    android:text="@string/SankalpamScreenFamilyInfoTableHeaderName"
                    android:textSize="20sp"
                    android:paddingHorizontal="10sp" />

                <TextView
                    android:text="@string/SankalpamScreenFamilyInfoTableHeaderGothram"
                    android:textSize="20sp"
                    android:paddingHorizontal="10sp" />

                <TextView
                    android:text="@string/SankalpamScreenFamilyInfoTableHeaderStar"
                    android:textSize="20sp"
                    android:paddingHorizontal="10sp" />

                <TextView
                    android:text="@string/SankalpamScreenFamilyInfoTableHeaderRasi"
                    android:textSize="20sp"
                    android:paddingHorizontal="10sp" />

            </TableRow>

        </TableLayout>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>