<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/SponsorsScreenToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/SponsorsScreenImgViewLogo"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:contentDescription="@string/SponsorsScreenLogoImgViewDescription"
                    android:src="@mipmap/app_logo_round" />

                <TextView
                    android:id="@+id/SponsorsScreenTxtViewAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_toRightOf="@+id/SponsorsScreenImgViewLogo"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/SponsorsScreenTxtViewTitleMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:textSize="35sp"
            android:layout_below="@+id/SponsorsScreenToolbar" />

        <TableLayout
            android:id="@+id/SponsorsScreenSponsorsInfoTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/SponsorsScreenTxtViewTitleMessage" >

            <TableRow
                tools:ignore="UselessParent" >

                <TextView
                    android:text="@string/SponsorScreenTableHeaderName"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:paddingHorizontal="5sp" />

                <TextView
                    android:text="@string/SponsorScreenTableHeaderMobileNumber"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:paddingHorizontal="5sp" />

                <TextView
                    android:text="@string/SponsorScreenTableHeaderLocation"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:paddingHorizontal="5sp" />

            </TableRow>

        </TableLayout>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>