<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/SankalpamAdminScreenToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/SankalpamAdminScreenImgViewLogo"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:contentDescription="@string/SankalpamScreenLogoImgViewDescription"
                    android:src="@mipmap/app_logo_round" />

                <TextView
                    android:id="@+id/SankalpamAdminScreenTxtViewAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_toEndOf="@+id/SankalpamAdminScreenImgViewLogo"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/SankalpamAdminScreenTxtViewTitleMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:textSize="35sp"
            android:layout_below="@+id/SankalpamAdminScreenToolbar" />

        <TextView
            android:id="@+id/SankalpamAdminScreenTxtViewUpayamLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:paddingVertical="5sp"
            android:text="@string/SankalpamAdminScreenSponsorSelectLabelName"
            android:layout_below="@+id/SankalpamAdminScreenTxtViewTitleMessage" />

        <Spinner
            android:id="@+id/SankalpamAdminScreenSponsorsDropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_below="@+id/SankalpamAdminScreenTxtViewTitleMessage"
            android:layout_toEndOf="@+id/SankalpamAdminScreenTxtViewUpayamLabel" />

        <TextView
            android:id="@+id/SankalpamAdminScreenTxtViewPradoshamLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:textSize="20sp"
            android:text="@string/SankalpamScreenPradoshamInfoTableLabel"
            android:layout_below="@+id/SankalpamAdminScreenTxtViewUpayamLabel" />

        <ScrollView
            android:id="@+id/SankalpamAdminScreenPradoshamInfoTableScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:layout_centerHorizontal="true"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:layout_below="@+id/SankalpamAdminScreenTxtViewPradoshamLabel" >

            <TableLayout
                android:id="@+id/SankalpamAdminScreenPradoshamInfoTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isScrollContainer="true" />

        </ScrollView>

        <TextView
            android:id="@+id/SankalpamAdminScreenTxtViewFamilyLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:textSize="20sp"
            android:text="@string/SankalpamScreenFamilyInfoTableLabel"
            android:layout_below="@+id/SankalpamAdminScreenPradoshamInfoTableScrollView" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:layout_centerHorizontal="true"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:layout_below="@+id/SankalpamAdminScreenTxtViewFamilyLabel" >

            <TableLayout
                android:id="@+id/SankalpamAdminScreenFamilyInfoTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isScrollContainer="true" />

        </ScrollView>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>